<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/greetingET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/greeting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:background="#696969"
        />

    <!--<TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/ldi_mission_helper"
        android:textSize="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingET"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/ldi_mission_helper"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dailyQtBtn"
        android:layout_width="203dp"
        android:layout_height="65dp"
        android:text="@string/dailyQt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/recitaion_Btn" />

    <Button
        android:id="@+id/recitaion_Btn"
        android:layout_width="199dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/recitation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.554"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:id="@+id/missionPaperViewer_Btn"
        android:layout_width="205dp"
        android:layout_height="65dp"
        android:text="@string/missionPaper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/recitaion_Btn" />

    <TextView
        android:id="@+id/webLink"
        android:textSize="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/http_ldi_kr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintHorizontal_bias="0.501"/>

    <!--<ListView
        android:id="@+id/main_list_view"
        android:layout_width="179dp"
        android:layout_height="241dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/webLink"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.72">
    </ListView>-->


</android.support.constraint.ConstraintLayout>
